🎨 separated footer component

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -6,13 +6,13 @@
 
 [data-theme="dark"] {
   --color-text: white;
-  --color-background: black;
+  --color-background: #1d1d1d;
 }
 
 [data-theme="auto"] {
   @media (prefers-color-scheme: dark) {
     --color-text: white;
-    --color-background: black;
+    --color-background: #1d1d1d;
   }
 }
 
