--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -300,7 +300,7 @@ input {
 }
 
 a {
-  color: #555;
+  color: var(--color-text);
   text-decoration: none;
 }
 
@@ -327,10 +327,9 @@ body {
   height: 100%
 }
 
-#wrapper {
-  min-height: 100%;
+.wrapper {
+  min-height: 100vh;
   position: relative;
-
 }
 
 .container-outer {
@@ -1151,32 +1150,3 @@ input[type='text'] {
 
 }
 
-.arrow-right1 {
-  padding: 0px;
-  padding: 0px;
-  padding-left: 10px;
-  color: var(--color-background);
-  height: 0px;
-  line-height: 0px;
-  border-top: 10px solid transparent;
-  border-bottom: 10px solid transparent;
-  border-left: 15px solid #999;
-}
-
-.arrow-right1:hover {
-  border-left: 15px solid var(--color-background);
-}
-
-.ulink {
-  color: #999
-}
-
-.darkonfocus {
-  color: #999
-}
-
-.darkonfocus:hover,
-.darkonfocus:active,
-.darkonfocus:focus {
-  color: #333
-}
