--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -23,8 +23,9 @@ body {
   color: var(--color-text);
 }
 
-.one-liner p{
-  margin: 0; /*prevent paragraphs in markdown*/
+.one-liner p {
+  margin: 0;
+  /*prevent paragraphs in markdown*/
 }
 
 body,
@@ -123,7 +124,7 @@ body {
   }
 
   .bord1 {
-    border: 1px solid rgb(128, 128, 128, 0.16);;
+    border: 1px solid rgb(128, 128, 128, 0.16);
     border-radius: 8px;
   }
 
@@ -888,6 +889,7 @@ input[type='text'] {
     background: #808080;
     padding: 10px
   }
+
   .btn-scalegrey img {
     height: 80px;
     width: 80px;
@@ -895,4 +897,3 @@ input[type='text'] {
 
 
 }
-
