--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -31,7 +31,7 @@ body {
 body,
 textarea,
 input {
-  font: 15px/18px Verdana, sans-serif;
+  font: 13px/18px "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif;
   margin: 0;
   border-radius: 0;
   background: 0;
@@ -902,4 +902,11 @@ input[type='text'] {
 .gatsby-resp-image-background-image {
   /* gatsby shows blurry images.*/
   opacity: 0 !important;
+}
+
+.stylishpage {
+  font: 15px/18px Soleil, Verdana, sans-serif;
+  font-size: 15px;
+  line-height: 24px;
+  font-weight: 400;
 }
