💄 using sans serif only

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -905,7 +905,7 @@ input[type='text'] {
 }
 
 .stylishpage {
-  font: 15px/18px Soleil, Verdana, sans-serif;
+  font: 15px/18px sans-serif;
   font-size: 15px;
   line-height: 24px;
   font-weight: 400;
